welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: '=' expected but identifier found.
def methode:={
           ^Program:7: error: illegal start of simple expression
}
^